# uap-core-clickhouse-parser-rs

./: .gitignore  Cargo.toml  README.md
src/: args.rs  main.rs  parser_source_document.rs  parser_target_documents.rs  settings.rs  source_reader.rs  target_writer.rs
