[package]
name = "uap-core-clickhouse-parser-rs"
version = "0.1.0"
edition = "2021"
description = "Program that generates ClickhouseDB compatible yaml files for parsing user agent strings based on the uap-core regex"

[dependencies]
clap = { version = "4.5.29", features = ["derive", "string"] }
saphyr = "0.0.3"
