[package]
name = "uap-core-clickhouse-parser-rs"
version = "0.1.0"
edition = "2024"
description = "Program that generates ClickhouseDB compatible yaml files for parsing user agent strings based on the uap-core regex"

[[bin]]
name = "generate"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.29", features = ["derive", "string"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_yml = "0.0.12"
