[package]
name = "uap-core-clickhouse-parser-rs"
version = "0.1.0"
edition = "2024"
description = "Program that generates ClickhouseDB compatible yaml files for parsing user agent strings based on the uap-core regex"

[[bin]]
name = "generate"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.37", features = ["derive", "string"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml_ng = "0.10.0"
